[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/map/House3map.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Map/House3.png" type="Texture" id=2]
[ext_resource path="res://scence/ghost/GhostK.tscn" type="PackedScene" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 16, 16, 16, 16, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "House3.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 16, 32, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "House3.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 48, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "House3.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 32, 64, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "House3.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 0, 16, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 2 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 13 )

[node name="House3map" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="ground" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 261
collision_mask = 261
format = 1
tile_data = PoolIntArray( -1, -2147483647, 0, -65536, 536870913, 0, -65535, 536870913, 0, -65534, 536870913, 0, -65533, 536870913, 0, -65532, 536870913, 0, -65531, 536870913, 0, -65530, 536870913, 0, -65529, 536870913, 0, -65528, 536870913, 0, -65527, 536870913, 0, -65526, 536870913, 0, -65525, 536870913, 0, -65524, 536870913, 0, -65523, 536870913, 0, -65522, 536870913, 0, -65521, 536870913, 0, -65520, -536870911, 0, 65535, -2147483647, 0, 0, 536870914, 0, 1, 536870914, 0, 2, 536870914, 0, 3, 536870914, 0, 4, 536870914, 0, 5, 536870914, 0, 6, 536870914, 0, 7, 536870914, 0, 8, 536870914, 0, 9, 536870914, 0, 10, 536870914, 0, 11, 536870914, 0, 14, -536870910, 0, 15, -536870910, 0, 16, -536870911, 0, 131071, -2147483647, 0, 65536, 536870914, 0, 65537, 536870914, 0, 65538, 536870914, 0, 65539, 536870914, 0, 65540, 536870914, 0, 65544, 536870914, 0, 65545, 536870914, 0, 65546, 536870914, 0, 65547, 536870914, 0, 65551, -536870910, 0, 65552, -536870911, 0, 196607, -2147483647, 0, 131072, 536870914, 0, 131076, 536870914, 0, 131077, 536870914, 0, 131078, 536870914, 0, 131079, 536870914, 0, 131080, 536870914, 0, 131081, 536870914, 0, 131082, 536870914, 0, 131083, 536870914, 0, 131087, -536870910, 0, 131088, -536870911, 0, 262143, -2147483647, 0, 196608, 536870914, 0, 196609, 536870914, 0, 196610, 536870914, 0, 196611, 536870914, 0, 196612, 536870914, 0, 196613, 536870914, 0, 196614, 536870914, 0, 196615, 536870914, 0, 196616, 536870914, 0, 196617, 536870914, 0, 196618, 536870914, 0, 196623, -536870910, 0, 196624, -536870911, 0, 327679, -2147483647, 0, 262144, -536870910, 0, 262145, -536870910, 0, 262146, -536870910, 0, 262147, -536870910, 0, 262148, -536870910, 0, 262149, -536870910, 0, 262150, -536870910, 0, 262151, -536870910, 0, 262152, -536870910, 0, 262153, -536870910, 0, 262154, -536870910, 0, 262155, -536870910, 0, 262156, -536870910, 0, 262157, -536870910, 0, 262158, -536870910, 0, 262159, -536870910, 0, 262160, -536870911, 0, 393215, -2147483647, 0, 327695, -536870910, 0, 327696, -536870911, 0, 458751, -2147483647, 0, 393216, -536870910, 0, 393217, -536870910, 0, 393218, -536870910, 0, 393219, -536870910, 0, 393220, -536870910, 0, 393221, -536870910, 0, 393222, -536870910, 0, 393223, -536870910, 0, 393224, -536870910, 0, 393225, -536870910, 0, 393226, -536870910, 0, 393227, -536870910, 0, 393228, -536870910, 0, 393229, -536870910, 0, 393230, -536870910, 0, 393231, -536870910, 0, 393232, -536870911, 0, 524287, -2147483647, 0, 458768, -536870911, 0, 589823, -2147483647, 0, 524304, -536870911, 0, 655359, -2147483647, 0, 589831, 536870915, 0, 589840, -536870911, 0, 720895, 1073741825, 0, 655360, 1073741825, 0, 655361, 1073741825, 0, 655362, 1073741825, 0, 655363, 1073741825, 0, 655364, 1073741825, 0, 655365, 1073741825, 0, 655366, 1073741825, 0, 655368, 1073741825, 0, 655369, 1073741825, 0, 655370, 1073741825, 0, 655371, 1073741825, 0, 655372, 1073741825, 0, 655373, 1073741825, 0, 655374, 1073741825, 0, 655375, 1073741825, 0, 655376, 1073741825, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 121, 161 )
shape = SubResource( 4 )

[node name="GhostK" parent="." instance=ExtResource( 3 )]
position = Vector2( 126.5, 29 )
scale = Vector2( 0.8, 0.8 )

[node name="atk" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="effect" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
